# param

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  RELEASE.rst  about.html  comparisons.html  developer_guide.html  genindex.html  getting_started.html  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  releases.html  roadmap.html  script.py  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tox27.ini  upgrade_guide.html  versioneer.py
.github/workflows/: build.yaml  build.yml  docs.yaml  docs.yml  downstream_tests.yaml  nightly_lock.yaml  test.yaml  test.yml
ParamQt/: ParamQt.py
_sources/: developer_guide.md.txt  getting_started.md.txt  index.md.txt  upgrade_guide.md.txt
_sources/reference/: index.md.txt  numbergen.md.txt
_sources/reference/param/: logging.md.txt  param_namespace.md.txt  parameterized_helpers.md.txt  (+2 more)
_sources/user_guide/: Dependencies_and_Watchers.ipynb.txt  Dynamic_Parameters.ipynb.txt  Generators.ipynb.txt  How_Param_Works.ipynb.txt  Outputs.ipynb.txt  ParameterizedFunctions.ipynb.txt  Parameters.ipynb.txt  Reactive_Expressions.ipynb.txt  Serialization_and_Persistence.ipynb.txt  index.md.txt
benchmarks/: README.md  asv.conf.json
benchmarks/benchmarks/: __init__.py  benchmarks.py
binder/: environment.yaml  environment.yml  postBuild
conda.recipe/: meta.yaml
doc/: Makefile  Promo.ipynb  about.md  about.rst  comparisons.md  comparisons.rst  conf.py  conftest.py  developer_guide.md  getting_started.md  getting_started.rst  historical_release_notes.rst  index.md  index.rst  reference.rst  releases.md  roadmap.md  roadmap.rst  site_map.rst  switcher.json  upgrade_guide.md
doc/Reference_Manual/: index.rst
doc/_static/: site.css  switcher.json
doc/_templates/: page.html
doc/reference/: deprecations.md  index.md  param.md
doc/user_guide/: Dependencies_and_Watchers.ipynb  Dynamic_Parameters.ipynb  Generators.ipynb  How_Param_Works.ipynb  Logging_and_Warnings.ipynb  Outputs.ipynb  Parameter_Types.ipynb  ParameterizedFunctions.ipynb  Parameters.ipynb  Reactive_Expressions.ipynb  References.ipynb  Serialization_and_Persistence.ipynb  Simplifying_Codebases.rst  Typing.ipynb  index.md  index.rst
examples/: About.ipynb  Promo.ipynb  cmd.ipynb  comparisons.ipynb  getting_started.ipynb  index.ipynb  roadmap.ipynb
examples/.ipynb_checkpoints/: Introduction-checkpoint.ipynb
examples/user_guide/: Dependencies_and_Watchers.ipynb  Dynamic_Parameters.ipynb  How_Param_Works.ipynb  Logging_and_Messages.ipynb  Logging_and_Warnings.ipynb  Outputs.ipynb  Parameter_Types.ipynb  ParameterizedFunctions.ipynb  Parameters.ipynb  Reactive_Expressions.ipynb  Serialization_and_Persistence.ipynb  Simplifying_Codebases.ipynb  index.ipynb
numbergen/: __init__.py
param/: __init__.py  _async.py  _mypy_plugin.py  _utils.py  _utils.pyx  _version.py  cmd.py  depends.py  display.py  exceptions.py  extensions.py  io.py  ipython.py  logger.py  mypy_plugin.py  parameterized.py  parameterized.pyi  parameterized.pyx  parameters.py  parameters.pyi  reactive.py  serializer.py  typed.py  typer.py  utils.py  version.py
param/tests/: testversion.py
reference/: index.html  numbergen.html
reference/param/: index.html  logging.html  param_namespace.html  parameter_helpers.html  parameterized_helpers.html  parameterized_objects.html  parameters.html  reactive.html  serialization.html
scripts/: sync_git_tags.py
scripts/conda/: build.sh
static-typing/: analysis.md  experiment.md  experiment.py  problem.md
tests/: README.md  __init__.py  assert_types.py  conftest.py  testaddparameter.py  testbind.py  testbooleanparam.py  testbytesparam.py  testcalendardateparam.py  testcalendardaterangeparam.py  testcallable.py  testclassselector.py  testcolorparameter.py  testcomparator.py  testcompositeparams.py  testcustomparam.py  testdataframelike.py  testdateparam.py  testdaterangeparam.py  testdefaultfactory.py  testdefaults.py  testdeprecations.py  testdynamicparams.py  testfiledeserialization.py  testfileselector.py  testimports.py  testio.py  testipythonauto.py  testipythonmagic.py  testjsonserialization.py  testlist.py  testlistselector.py  testmultifileselector.py  testnumbergen.py  testnumberparameter.py  testnumpy.py  testobjectselector.py  testpandas.py  testparamdepends.py  testparamdepends_py3.py  (+23 more)
tests/API0/: testcalendardateparam.py  testcalendardaterangeparam.py  testclassselector.py  testcolorparameter.py  testcompositeparams.py  testdefaults.py  testdynamicparams.py  testipythonmagic.py  testlistselector.py  testnumbergen.py  testnumpy.py  testobjectselector.py  testparameterizedobject.py  testparameterizedrepr.py  testrangeparameter.py  teststringparam.py  testtimedependent.py
tests/API1/: __init__.py  testbooleanparam.py  testbytesparam.py  testcalendardateparam.py  testcalendardaterangeparam.py  testclassselector.py  testcolorparameter.py  testcomparator.py  testcompositeparams.py  testcustomparam.py  testdateparam.py  testdaterangeparam.py  testdefaults.py  testdynamicparams.py  testfiledeserialization.py  testfileselector.py  testipythonmagic.py  testjsonserialization.py  testlist.py  testlistselector.py  testmultifileselector.py  testnumbergen.py  testnumberparameter.py  testnumpy.py  testobjectselector.py  testpandas.py  testparamdepends.py  testparamdepends_py3.py  testparameterizedobject.py  testparameterizedrepr.py  testparamoutput.py  testparamunion.py  testpathparam.py  testrangeparameter.py  testselector.py  teststringparam.py  testtimedependent.py  testtupleparam.py  testutils.py  testwatch.py  (+1 more)
user_guide/: Dependencies_and_Watchers.html  Dynamic_Parameters.html  Generators.html  How_Param_Works.html  Logging_and_Warnings.html  Outputs.html  Parameter_Types.html  ParameterizedFunctions.html  Parameters.html  Reactive_Expressions.html  References.html  Serialization_and_Persistence.html  Simplifying_Codebases.html  index.html
(+13 files in other folders)
